# tanks-sfml

./: .gitignore  .gitmodules  AnimationSpriteSheet.h  CMakeLists.txt  Collider.h  Controller.cpp  Controller.h  Effect.h  GameObject.cpp  GameObject.h  GlobalConst.h  Logger.h  MapCreator.cpp  MapCreator.h  MapCreatorFromJson.h  ObjectsPool.h  README.md  Shootable.h  SoundPlayer.h  SpriteRenderer.cpp  SpriteRenderer.h  Utils.cpp  Utils.h  ideas.txt  main.cpp  main_client.cpp  main_server.cpp  visualizer.cpp
assets/: button.png~  levelup-popup.png~  scene.psd  shop-window.png~  spriteSheet16x16 copy.json  spriteSheet16x16.json  spriteSheet16x16.png~  spriteSheet32x32.json  spriteSheet32x32.json.old  spriteSheet32x32.png~  tank-colors.psd~  testmap.json  testmap.txt  testmap2.txt  testmap3.txt  testmap4.txt  z.kra  z.kra~
assets/audio/jingles/: titleTheme.wav.reapeaks  winJingle.wav.reapeaks
assets/maps/: 1_mission_town.json  1_mission_town.txt  2_mission_lake.txt  3_mission_hamlet.txt
assets/maps/segments/7x7/1-1/: 1.txt  2.txt  3.txt  4.txt  5.txt
assets/maps/segments/7x7/1-2/: 1.txt  2.txt  3.txt  4.txt
assets/maps/segments/7x7/1-3/: 1.txt  2.txt  3.txt  4.txt
assets/maps/segments/7x7/2-1/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
assets/maps/segments/7x7/2-2/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
assets/maps/segments/7x7/2-3/: 1.txt  2.txt  4.txt  5.txt
assets/maps/segments/7x7/3-1/: 1.txt  2.txt  3.txt  4.txt
assets/maps/segments/7x7/3-2/: 1.txt  2.txt  3.txt  4.txt
assets/maps/segments/7x7/3-3/: 1.txt  2.txt  3.txt
assets/maps/segments/garden/1-2/: 2.txt  4.txt
assets/maps/segments/town/1-1/: 1.txt  5.txt
assets/maps/segments/town/1-2/: 1.txt  2.txt
assets/maps/segments/town/1-3/: 1.txt  3.txt
assets/maps/segments/town/2-1/: 4.txt  6.txt  7.txt
assets/maps/segments/town/2-2/: 1.txt  3.txt  4.txt
assets/maps/segments/town/2-3/: 1.txt  3.txt  4.txt
assets/maps/segments/town/3-1/: 1.txt
assets/maps/segments/town/3-2/: 2.txt  3.txt  4.txt
assets/maps/segments/town/3-3/: 1.txt  3.txt  4.txt  5.txt
assets/maps_bak/: 2_mission_lake.txt  3_mission_hamlet.txt
include/: AssetManager.h  BaseUpgrade.h  BonusShopWindow.h  ClientSpriteRenderer.h  Collectable.h  Collider.h  Controller.h  Damageable.h  DropGenerator.h  EagleController.h  ExitPopupMenu.h  Game.h  GameClient.h  GameObject.h  GameOverScreen.h  GameServer.h  GlobalConst.h  GlobalTypes.h  HUD.h  LevelUpPopupMenu.h  Logger.h  MapCreator.h  MissionSelectScreen.h  NetGameTypes.h  NpcTankController.h  ObjectsPool.h  PersistentGameData.h  PlayerController.h  PlayerControllerClient.h  PlayerUpgrade.h  RandomMapCreator.h  SecondShootable.h  Shootable.h  SoundPlayer.h  SpriteRenderer.h  StartLevelScreen.h  TitleScreen.h  UiUtils.h  Utils.h
scripts/: enumeratespritesheet.py  moveaudiofiles.py  new.json  replacecharacterinmaps.py  test.py
src/: AssetManager.cpp  BaseUpgrade.cpp  BonusShopWindow.cpp  Collectable.cpp  Controller.cpp  Damageable.cpp  DropGenerator.cpp  EagleController.cpp  ExitPopupMenu.cpp  Game.cpp  GameClient.cpp  GameObject.cpp  GameOverScreen.cpp  GameServer.cpp  GlobalConst.cpp  HUD.cpp  LevelUpPopupMenu.cpp  MapCreator.cpp  MissionSelectScreen.cpp  NetGameTypes.cpp  NpcTankController.cpp  ObjectsPool.cpp  PersistentGameData.cpp  PlayerController.cpp  PlayerControllerClient.cpp  PlayerSpawnController.cpp  PlayerUpgrade.cpp  RandomMapCreator.cpp  SecondShootable.cpp  Shootable.cpp  SoundPlayer.cpp  SpawnController.cpp  SpriteRenderer.cpp  StartLevelScreen.cpp  TitleScreen.cpp  UiUtils.cpp  Utils.cpp  main.cpp
